title fixed, removed extra space that was at the bottom of category grid

--- a/ourStyles.css
+++ b/ourStyles.css
@@ -299,3 +299,11 @@
     background-color: rgba(42, 42, 42, 0.8);
     color: whitesmoke;
   }
+
+  .popover-content {
+    margin-bottom: -22px;
+  }
+
+  #testSidebar-title {
+    padding: 5px;
+  }
